<resources>
    <string name="app_name">TryingApplication</string>
    <string name="json_data_try">Hello</string>
    <string name="btn_get">GetData</string>
    <string name="city_name">  Enter City</string>
    <string name="recycle_id">ID</string>
    <string name="recycle_name">Names</string>
    <string name="recycle_url">urls</string>
    <string name="img_description">Description</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_SignUp">Sign Up</string>
    <string name="NewPrompt">Already have an account?</string>
    <string name="ClickToLogin">Login</string>
    <string name="redirectToLogin">Login</string>
    <string name="redirectToSignUpText">New to This App?</string>
    <string name="redirectToSignUp">Sign Up</string>
    <string name="firstNameView">Name : </string>
    <string name="finalHotelLocation">Location : </string>
    <string name="finalPrice">Price : </string>
    <string name="txtCardType">Card Type</string>
    <string name="radVisaCard">Visa Card</string>
    <string name="radioMasterCard">Master Card</string>
    <string name="radioAmExCard">AmExCard</string>
    <string name="radioGooglePay">Google Pay</string>
    <string name="txtNameOnCard">Name On Card: </string>
    <string name="txtCardNumber">Card Number: </string>
    <string name="txtExpiryCode">Expiry Date: </string>
    <string name="txtSecurityCode">Security Code: </string>
    <string name="btnPay">Pay</string>
    <string name="longitiude">Longitude</string>
    <string name="latitudeView">Latitude</string>
    <string name="btnBook">Book</string>
    <string name="OpenMap">MapView</string>
    <string name="PickDate">Pick Date</string>
    <string name="ButtonGetInfo">Search</string>
    <string name="HotelDetails">Hotel Details</string>
    <string name="firstNameUser">First Name</string>
    <string name="userLastName">Last name</string>
    <string name="userPhone">Phone Number</string>
    <string name="PersonInfo">Personal Information</string>
    <string name="PeopleNumber">No. of people</string>
    <string name="paybutton">Pay</string>
    <string-array name="numberOfPeople">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="title_activity_nav_drawer_try">NavDrawerTry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="numberPerson">Number of Days: </string>
    <string name="txtExpirdDate">Expire Date: </string>
    <string name="txtPayment">Pay</string>
    <string name="payment">Payment:</string>
    <string name="spinnergg">No. of people</string>
    <string name="CardType">Card Type</string>
    <string name="NameOnCard">Name On Card</string>
    <string name="txCardNumber">Card Number</string>
    <string name="txCardType">Card Type</string>
    <string name="txNameOnCard">Name On Card</string>
    <string name="txExpirDate">Expire Date</string>
    <string name="txSecurityCode">Security Code</string>
</resources>