<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash11"
    android:backgroundTint="#A6292727"
    android:backgroundTintMode="src_atop"
    tools:context=".UserInformation">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PersonInfo"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/userFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userFirstName"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:background="@drawable/bgbtn"
        android:hint="@string/firstNameUser"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:selectAllOnFocus="true"
        android:textColor="#F5F1F1"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <EditText
        android:id="@+id/userLastName"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:background="@drawable/bgbtn"
        android:hint="@string/userLastName"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:selectAllOnFocus="true"
        android:textColor="#F5F1F1"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <EditText
        android:id="@+id/userPhone"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bgbtn"
        android:ems="10"
        android:hint="@string/userPhone"
        android:includeFontPadding="false"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userFirstName" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_people"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:textColor = "@android:color/white"
        android:background="@drawable/bgbtn"
        android:contentDescription="@string/PeopleNumber"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPhone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/txtgrad"
        android:text="@string/paybutton"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_people" />

</androidx.constraintlayout.widget.ConstraintLayout>