<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singleViewName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleSelection">

    <TextView
        android:id="@+id/hotelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.643"
        app:layout_constraintStart_toEndOf="@+id/finalNameView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/finalNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/firstNameView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/finalLocationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalHotelLocation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalNameView"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/finalPriceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalLocationView"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/hotelLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotelName"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/hotelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/finalPriceView"
        app:layout_constraintTop_toBottomOf="@+id/hotelLocation"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/longitudeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitiude"
        app:layout_constraintBottom_toTopOf="@+id/btnToPay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalPriceView"
        app:layout_constraintVertical_bias="0.365" />

    <TextView
        android:id="@+id/hotelLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/longitudeView"
        app:layout_constraintTop_toBottomOf="@+id/hotelPrice"
        app:layout_constraintVertical_bias="0.136" />

    <TextView
        android:id="@+id/hotelLng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toEndOf="@+id/Latitude"
        app:layout_constraintTop_toBottomOf="@+id/hotelLat"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/btnToPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalPriceView"
        app:layout_constraintVertical_bias="0.436" />

    <TextView
        android:id="@+id/Latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitudeView"
        app:layout_constraintBottom_toTopOf="@+id/btnToPay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitudeView"
        app:layout_constraintVertical_bias="0.396" />

    <Button
        android:id="@+id/openMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/OpenMap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toEndOf="@+id/btnToPay"
        app:layout_constraintTop_toBottomOf="@+id/hotelLng"
        app:layout_constraintVertical_bias="0.032" />
</androidx.constraintlayout.widget.ConstraintLayout>